--- a/sitespecific/content/changelog
+++ b/sitespecific/content/changelog
@@ -1,7 +1,15 @@
 <h2>WalkerCMS Change Log</h2>
 <ul>
-  <li><a href="#0.5" title="version 0.5">0.5</a></li>
+  <li><a href="#0.9">0.9</a></li>
+  <li><a href="#0.5">0.5</a></li>
 </ul>
+
+<h3 id="0.9">0.9</h3>
+<ul>
+  <li>Cache fully rendered pages (<a href="https://github.com/tpwalke2/WalkerCMS/issues/27">#27</a>)</li>
+  <li>Logging controlled on a per-site basis (<a href="https://github.com/tpwalke2/WalkerCMS/issues/33">#33</a>)</li>
+</ul>
+<p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
 
 <h3 id="0.5">0.5</h3>
 <ul>
