Updating the changelog for new functionality

--- a/sitespecific/content/changelog
+++ b/sitespecific/content/changelog
@@ -6,8 +6,10 @@
 
 <h3 id="0.9">0.9</h3>
 <ul>
+  <li>Clear cache when site config changes (<a href="https://github.com/tpwalke2/WalkerCMS/issues/14">#14</a>)</li>
   <li>Cache fully rendered pages (<a href="https://github.com/tpwalke2/WalkerCMS/issues/27">#27</a>)</li>
   <li>Logging controlled on a per-site basis (<a href="https://github.com/tpwalke2/WalkerCMS/issues/33">#33</a>)</li>
+  <li>Site-wide custom HTML header (<a href="https://github.com/tpwalke2/WalkerCMS/issues/34">#34</a>)</li>
 </ul>
 <p class="back-to-top"><a href="#top" title="Back to top">Back to top</a></p>
 
